[MRELEASE-101] make tests compile on JDK 1.4
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-release-plugin@399572 13f79535-47bb-0310-9956-ffa450edef68